// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders create 1`] = `
<div
  className="LandingPage"
>
  <Container
    className="header-container"
    fluid={true}
  >
    <AbsoluteLogo />
    <Container
      fluid={false}
    >
      <header>
        <div
          className="call"
        >
          <span
            className="first"
          >
            You are only 
            2
             (simple) steps away
          </span>
          <span
            className="second"
          >
            from your logion legal protection
          </span>
        </div>
      </header>
    </Container>
  </Container>
  <Container
    fluid={false}
  >
    <Row
      noGutters={true}
    >
      <Col
        className="step one"
      >
        <div
          className="step-container"
        >
          <div
            className="step-header"
          >
            <div
              className="number"
            >
              01.
            </div>
            <div
              className="description"
            >
              <span
                className="action"
              >
                Download
              </span>
               
              <span>
                the plugin
              </span>
            </div>
          </div>
          <div
            className="step-content"
          >
            <img
              alt="people carrying extension"
              src="/assets/landing/step1.svg"
            />
          </div>
          <Dialog
            actions={
              Array [
                Object {
                  "buttonText": "Close",
                  "buttonVariant": "primary",
                  "callback": [Function],
                  "id": "close",
                },
              ]
            }
            show={false}
            size="lg"
          >
            <InstallExtension />
          </Dialog>
        </div>
      </Col>
      <Col
        className="step two active"
      >
        <div
          className="step-container"
        >
          <div
            className="step-header"
          >
            <div
              className="number"
            >
              02.
            </div>
            <div
              className="description"
            >
              <span
                className="action"
              >
                Create
              </span>
               
              <span>
                your wallet
              </span>
            </div>
          </div>
          <div
            className="step-content"
          >
            <img
              alt="people carrying extension"
              src="/assets/landing/step2.svg"
            />
            <div
              className="button-container"
            >
              <Button
                onClick={[Function]}
              >
                <span>
                  Start 
                  <Icon
                    colorThemeType="dark"
                    icon={
                      Object {
                        "hasVariants": true,
                        "id": "forward",
                      }
                    }
                  />
                </span>
              </Button>
            </div>
          </div>
          <Dialog
            actions={
              Array [
                Object {
                  "buttonText": "Close",
                  "buttonVariant": "primary",
                  "callback": [Function],
                  "id": "close",
                },
              ]
            }
            show={false}
            size="lg"
          >
            <CreateWallet />
          </Dialog>
        </div>
      </Col>
      <Col
        className="step three"
      >
        <div
          className="step-container"
        >
          <div
            className="step-header"
          >
            <div
              className="number"
            >
              03.
            </div>
            <div
              className="description"
            >
              <span
                className="action"
              >
                Access
              </span>
               
              <span>
                your dashboard
              </span>
            </div>
          </div>
          <div
            className="step-content"
          >
            <img
              alt="people carrying extension"
              src="/assets/landing/step3.svg"
            />
          </div>
        </div>
      </Col>
    </Row>
    <div
      className="dark-waves"
    />
  </Container>
  <Container
    fluid={false}
  >
    <Row
      noGutters={false}
    >
      <Col
        className="what-section"
      >
        <h1>
          Logion offers
        </h1>
        <p>
          <strong>
            a blockchain network managed by legal officers
          </strong>
          <br />
          that provides a decentralized and legal guarantee for all your 
          <strong>
            digital assets
          </strong>
           and 
          <strong>
            digital transactions
          </strong>
        </p>
      </Col>
    </Row>
  </Container>
  <Container
    fluid={false}
  >
    <Row
      noGutters={true}
    >
      <Col>
        <h1
          className="section-title"
        >
          <span
            className="highlight"
          >
            Digital Asset
          </span>
           protection
        </h1>
      </Col>
    </Row>
  </Container>
  <div
    className="recovery-container"
  >
    <Container
      fluid={false}
    >
      <Row
        noGutters={true}
      >
        <Col
          className="lost-password-container"
          md={3}
        >
          <img
            alt="women lost password"
            className="lost-password"
            src="/assets/landing/recovery1.svg"
          />
        </Col>
        <Col
          md={6}
        >
          <div
            className="recovery-process"
          >
            <p>
              Inaccessible wallet? 
              <strong>
                recovery process
              </strong>
            </p>
            <Button
              onClick={[Function]}
            >
              Start my recovery process
            </Button>
            <Dialog
              actions={
                Array [
                  Object {
                    "buttonText": "Close",
                    "buttonVariant": "primary",
                    "callback": [Function],
                    "id": "close",
                  },
                ]
              }
              show={false}
              size="lg"
            >
              <ol>
                <li>
                  Follow the steps at the top of the page (install the extension, then create a new account)
                </li>
                <li>
                  Once you access your dashboard, start a recovery with your new account
                </li>
              </ol>
            </Dialog>
          </div>
        </Col>
        <Col
          className="recovered-password-container"
          md={3}
        >
          <img
            alt="legal officer giving key"
            className="recovered-password"
            src="/assets/landing/recovery2.svg"
          />
        </Col>
      </Row>
    </Container>
  </div>
  <div
    className="map-background"
  >
    <Container
      fluid={false}
    >
      <Row
        noGutters={true}
      >
        <Col>
          <h1
            className="section-title transaction-protection"
          >
            <span
              className="highlight"
            >
              Digital Transaction
            </span>
             protection
          </h1>
        </Col>
      </Row>
    </Container>
    <div
      className="transaction-container"
    >
      <Container
        fluid={false}
      >
        <Row
          noGutters={true}
        >
          <Col
            md={7}
          >
            <div
              className="transaction-process"
            >
              <p>
                To protect all your digital transactions, 
                <strong>
                  Logion Legal Officers
                </strong>
                 establish a secured logion's 
                <strong>
                  Legal Officer Case
                </strong>
                : a blockchain based digital folder containing all references to transaction related legal documents, judicial reports and digital files, certified by a Judicial Officer, enforceable within +150 countries
              </p>
            </div>
          </Col>
          <Col
            className="transaction-protection-container"
            md={5}
          >
            <img
              alt="man adding an item to a case"
              className="transaction-protection"
              src="/assets/landing/transaction-protection.svg"
            />
          </Col>
        </Row>
      </Container>
    </div>
    <div
      className="protection-container"
    >
      <p
        className="foundation"
      >
        <strong>
          The foundation of
        </strong>
         your protection
      </p>
      <div
        className="legal-officers"
      >
        <img
          alt="male legal officer"
          className="protection-male"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="protection-female"
          src="/assets/landing/protection_female.svg"
        />
      </div>
      <div
        className="explanation"
      >
        <h1>
          Logion Legal Officers
        </h1>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified
          </strong>
          <br />
          legal experts such as Judicial Officers and Lawyers, who apply a
          <br />
          strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </div>
    </div>
  </div>
  <footer>
    <Container
      fluid={true}
    >
      <Container
        fluid={false}
      >
        <Row
          noGutters={false}
        >
          <Col>
            <AbsoluteLogo
              position={
                Object {
                  "left": "0",
                  "top": "0",
                  "type": "relative",
                }
              }
            />
          </Col>
          <Col>
            <div
              className="contact"
            >
              <div
                className="social"
              >
                <a
                  href="https://twitter.com/logion_network"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="twitter icon"
                    src="/assets/landing/twitter.png"
                  />
                </a>
                <a
                  href="https://www.linkedin.com/company/logion-network/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="linkedin icon"
                    src="/assets/landing/linkedin.png"
                  />
                </a>
                <a
                  href="https://discord.gg/FvnxrtCYr6"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="discord icon"
                    src="/assets/landing/discord.png"
                  />
                </a>
              </div>
              <a
                className="mail"
                href="mailto:info@logion.network"
              >
                info@logion.network
              </a>
            </div>
          </Col>
          <Col>
            <div
              className="legal"
            >
              <a
                href="https://logion.network/"
                rel="noreferrer"
                target="_blank"
              >
                Privay policy
              </a>
              <a
                href="https://logion.network/"
                rel="noreferrer"
                target="_blank"
              >
                Terms and conditions
              </a>
            </div>
          </Col>
        </Row>
      </Container>
    </Container>
  </footer>
</div>
`;

exports[`renders install 1`] = `
<div
  className="LandingPage"
>
  <Container
    className="header-container"
    fluid={true}
  >
    <AbsoluteLogo />
    <Container
      fluid={false}
    >
      <header>
        <div
          className="call"
        >
          <span
            className="first"
          >
            You are only 
            3
             (simple) steps away
          </span>
          <span
            className="second"
          >
            from your logion legal protection
          </span>
        </div>
      </header>
    </Container>
  </Container>
  <Container
    fluid={false}
  >
    <Row
      noGutters={true}
    >
      <Col
        className="step one active"
      >
        <div
          className="step-container"
        >
          <div
            className="step-header"
          >
            <div
              className="number"
            >
              01.
            </div>
            <div
              className="description"
            >
              <span
                className="action"
              >
                Download
              </span>
               
              <span>
                the plugin
              </span>
            </div>
          </div>
          <div
            className="step-content"
          >
            <img
              alt="people carrying extension"
              src="/assets/landing/step1.svg"
            />
            <div
              className="button-container"
            >
              <Button
                onClick={[Function]}
              >
                <span>
                  Start 
                  <Icon
                    colorThemeType="light"
                    icon={
                      Object {
                        "hasVariants": true,
                        "id": "forward",
                      }
                    }
                  />
                </span>
              </Button>
            </div>
          </div>
          <Dialog
            actions={
              Array [
                Object {
                  "buttonText": "Close",
                  "buttonVariant": "primary",
                  "callback": [Function],
                  "id": "close",
                },
              ]
            }
            show={false}
            size="lg"
          >
            <InstallExtension />
          </Dialog>
        </div>
      </Col>
      <Col
        className="step two"
      >
        <div
          className="step-container"
        >
          <div
            className="step-header"
          >
            <div
              className="number"
            >
              02.
            </div>
            <div
              className="description"
            >
              <span
                className="action"
              >
                Create
              </span>
               
              <span>
                your wallet
              </span>
            </div>
          </div>
          <div
            className="step-content"
          >
            <img
              alt="people carrying extension"
              src="/assets/landing/step2.svg"
            />
          </div>
          <Dialog
            actions={
              Array [
                Object {
                  "buttonText": "Close",
                  "buttonVariant": "primary",
                  "callback": [Function],
                  "id": "close",
                },
              ]
            }
            show={false}
            size="lg"
          >
            <CreateWallet />
          </Dialog>
        </div>
      </Col>
      <Col
        className="step three"
      >
        <div
          className="step-container"
        >
          <div
            className="step-header"
          >
            <div
              className="number"
            >
              03.
            </div>
            <div
              className="description"
            >
              <span
                className="action"
              >
                Access
              </span>
               
              <span>
                your dashboard
              </span>
            </div>
          </div>
          <div
            className="step-content"
          >
            <img
              alt="people carrying extension"
              src="/assets/landing/step3.svg"
            />
          </div>
        </div>
      </Col>
    </Row>
    <div
      className="dark-waves"
    />
  </Container>
  <Container
    fluid={false}
  >
    <Row
      noGutters={false}
    >
      <Col
        className="what-section"
      >
        <h1>
          Logion offers
        </h1>
        <p>
          <strong>
            a blockchain network managed by legal officers
          </strong>
          <br />
          that provides a decentralized and legal guarantee for all your 
          <strong>
            digital assets
          </strong>
           and 
          <strong>
            digital transactions
          </strong>
        </p>
      </Col>
    </Row>
  </Container>
  <Container
    fluid={false}
  >
    <Row
      noGutters={true}
    >
      <Col>
        <h1
          className="section-title"
        >
          <span
            className="highlight"
          >
            Digital Asset
          </span>
           protection
        </h1>
      </Col>
    </Row>
  </Container>
  <div
    className="recovery-container"
  >
    <Container
      fluid={false}
    >
      <Row
        noGutters={true}
      >
        <Col
          className="lost-password-container"
          md={3}
        >
          <img
            alt="women lost password"
            className="lost-password"
            src="/assets/landing/recovery1.svg"
          />
        </Col>
        <Col
          md={6}
        >
          <div
            className="recovery-process"
          >
            <p>
              Inaccessible wallet? 
              <strong>
                recovery process
              </strong>
            </p>
            <Button
              onClick={[Function]}
            >
              Start my recovery process
            </Button>
            <Dialog
              actions={
                Array [
                  Object {
                    "buttonText": "Close",
                    "buttonVariant": "primary",
                    "callback": [Function],
                    "id": "close",
                  },
                ]
              }
              show={false}
              size="lg"
            >
              <ol>
                <li>
                  Follow the steps at the top of the page (install the extension, then create a new account)
                </li>
                <li>
                  Once you access your dashboard, start a recovery with your new account
                </li>
              </ol>
            </Dialog>
          </div>
        </Col>
        <Col
          className="recovered-password-container"
          md={3}
        >
          <img
            alt="legal officer giving key"
            className="recovered-password"
            src="/assets/landing/recovery2.svg"
          />
        </Col>
      </Row>
    </Container>
  </div>
  <div
    className="map-background"
  >
    <Container
      fluid={false}
    >
      <Row
        noGutters={true}
      >
        <Col>
          <h1
            className="section-title transaction-protection"
          >
            <span
              className="highlight"
            >
              Digital Transaction
            </span>
             protection
          </h1>
        </Col>
      </Row>
    </Container>
    <div
      className="transaction-container"
    >
      <Container
        fluid={false}
      >
        <Row
          noGutters={true}
        >
          <Col
            md={7}
          >
            <div
              className="transaction-process"
            >
              <p>
                To protect all your digital transactions, 
                <strong>
                  Logion Legal Officers
                </strong>
                 establish a secured logion's 
                <strong>
                  Legal Officer Case
                </strong>
                : a blockchain based digital folder containing all references to transaction related legal documents, judicial reports and digital files, certified by a Judicial Officer, enforceable within +150 countries
              </p>
            </div>
          </Col>
          <Col
            className="transaction-protection-container"
            md={5}
          >
            <img
              alt="man adding an item to a case"
              className="transaction-protection"
              src="/assets/landing/transaction-protection.svg"
            />
          </Col>
        </Row>
      </Container>
    </div>
    <div
      className="protection-container"
    >
      <p
        className="foundation"
      >
        <strong>
          The foundation of
        </strong>
         your protection
      </p>
      <div
        className="legal-officers"
      >
        <img
          alt="male legal officer"
          className="protection-male"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="protection-female"
          src="/assets/landing/protection_female.svg"
        />
      </div>
      <div
        className="explanation"
      >
        <h1>
          Logion Legal Officers
        </h1>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified
          </strong>
          <br />
          legal experts such as Judicial Officers and Lawyers, who apply a
          <br />
          strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </div>
    </div>
  </div>
  <footer>
    <Container
      fluid={true}
    >
      <Container
        fluid={false}
      >
        <Row
          noGutters={false}
        >
          <Col>
            <AbsoluteLogo
              position={
                Object {
                  "left": "0",
                  "top": "0",
                  "type": "relative",
                }
              }
            />
          </Col>
          <Col>
            <div
              className="contact"
            >
              <div
                className="social"
              >
                <a
                  href="https://twitter.com/logion_network"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="twitter icon"
                    src="/assets/landing/twitter.png"
                  />
                </a>
                <a
                  href="https://www.linkedin.com/company/logion-network/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="linkedin icon"
                    src="/assets/landing/linkedin.png"
                  />
                </a>
                <a
                  href="https://discord.gg/FvnxrtCYr6"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="discord icon"
                    src="/assets/landing/discord.png"
                  />
                </a>
              </div>
              <a
                className="mail"
                href="mailto:info@logion.network"
              >
                info@logion.network
              </a>
            </div>
          </Col>
          <Col>
            <div
              className="legal"
            >
              <a
                href="https://logion.network/"
                rel="noreferrer"
                target="_blank"
              >
                Privay policy
              </a>
              <a
                href="https://logion.network/"
                rel="noreferrer"
                target="_blank"
              >
                Terms and conditions
              </a>
            </div>
          </Col>
        </Row>
      </Container>
    </Container>
  </footer>
</div>
`;
